# TheMotteDashboard

./: .ghcid  .gitignore  CNAME  CW-meta.json  CW-sanitizied.json  CW.json  FF-meta.json  FF-sanitizied.json  FF.json  README.md  SQ-meta.json  SQ-sanitizied.json  SQ.json  TheMotte.json  TheMotteDashboard.cabal  WW-meta.json  WW-sanitizied.json  WW.json  cw.atom  cw.html  docker.nix  ff.atom  ff.html  flake.nix  hie.yaml  index.html  sq.atom  sq.html  timeline.atom  timeline.html  u.html  ww.atom  ww.html
.github/workflows/: build.yaml  cron.yml  publish.yaml
content/: fetcher  index.md
src/: Main.hs
u/: -gipple.atom  -gipple.html  07mk.atom  07mk.html  2cimarafa.atom  2cimarafa.html  4bpp.atom  4bpp.html  6tjk.atom  6tjk.html  70rd.atom  70rd.html  AdviceThrowaway1901.atom  AdviceThrowaway1901.html  AlternativeEvent2584.atom  AlternativeEvent2584.html  Amadanb.atom  Amadanb.html  AndOnTheNthDay.atom  AndOnTheNthDay.html  Anouleth.atom  Anouleth.html  April16-1457BC.atom  April16-1457BC.html  Armadiljon.atom  Armadiljon.html  Arminio90.atom  Arminio90.html  AshLael.atom  AshLael.html  Atersed.atom  Atersed.html  Athanasius_19.atom  Athanasius_19.html  Atherzon.atom  Atherzon.html  Beej67.atom  Beej67.html  Ben___Garrison.atom  Ben___Garrison.html  (+560 more)
